<resources>
    <string name="app_name">Lowlane Coffee</string>
    <string name="app_address">475A Điện Biên Phủ, Phường 25, Bình Thạnh, Thành phố Hồ Chí Minh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Employee">Nhân Viên</string>
    <string name="Categories">Chức năng</string>
    <string name="Order">Đặt món</string>
    <string name="Invoice">Hóa đơn</string>
    <string name="UserInfo">Thông tin</string>
    <string name="Coffee">Cà Phê</string>
    <string name="CoffeeType">Coffee</string>
    <string name="smoothie">Sinh Tố</string>
    <string name="VND">VNĐ: </string>
    <string name="HotDrink">Bán chạy</string>
    <string name="f10t15m">10 - 15 (ph)</string>
    <string name="f25m">25 (ph)</string>
    <string name="VND25K"> 25,000 </string>
    <string name="f5t10m">5 - 10 (ph)</string>
    <string name="VND15K"> 15,000 </string>
    <string name="CreateNewUserAccount">Tạo tài khoản mới</string>
    <string name="UserLogin">Tên tài khoản</string>
    <string name="UserLoginHint">Nhập tên tài khoản</string>
    <string name="Password">Mật khẩu</string>
    <string name="PasswordHint">Nhập mật khẩu</string>
    <string name="Permission">Loại tài khoản</string>
    <string name="FullName">Họ tên</string>
    <string name="DateOfBirth">Ngày sinh</string>
    <string name="Gender">Giới tính</string>
    <string name="Phone">Số điện thoại</string>
    <string name="Address">Địa chỉ</string>
    <string name="Create">Tạo</string>
    <string name="Cancel">Hủy</string>
    <string name="DeleteDrink">Xóa thức uống khỏi cửa hàng</string>
    <string name="DrinkName">Chọn Thức Uống</string>
    <string name="Delete">Xóa</string>
    <string name="DeleteUser">Xóa tài khoản khỏi hệ thống</string>
    <string name="Male">Nam</string>
    <string name="Female">Nữ</string>
    <string name="UserManager">Quản lý nhân viên</string>
    <string name="DrinkManager">Quản lý đồ uống</string>
    <string name="SummaryReport">Báo cáo doanh thu</string>
    <string name="AddNewDrink">Thêm đồ uống mới</string>
    <string name="UpdateDrink">Cập nhật đồ uống</string>
    <string name="DeleteDrinks">Xóa đồ uống</string>
    <string name="AddNewUser">Thêm người dùng mới</string>
    <string name="ResetPassword">Đặt lại mật khẩu</string>
    <string name="UpdateUser">Cập nhật người dùng</string>
    <string name="ChangePassword">Đổi mật khẩu</string>
    <string name="DeleteUsers">Xóa người dùng</string>
    <string name="Type">Loại</string>
    <string name="ReportWithType">Báo cáo doanh thu theo tiêu chí</string>
    <string name="InvoiceTotal">Tổng số hóa đơn</string>
    <string name="Amount">Tổng tiền</string>
    <string name="EnterUserNameHint">Nhập tên tài khoản</string>
    <string name="EnterPasswordHint">Nhập mật khẩu</string>
    <string name="Reset">Đặt lại</string>
    <string name="DrinkID">Mã đồ uống</string>
    <string name="DrinkType">Loại đồ uống</string>
    <string name="DrinkLabel">Tên đồ uống</string>
    <string name="Price">Giá tiền</string>
    <string name="Update">Cập nhật</string>
    <string name="EnterPassAndChange">Nhập mật khẩu cũ và đổi lại mật khẩu mới</string>
    <string name="OldPassword">Nhập mật khẩu cũ</string>
    <string name="NewPassword">Nhập mật khẩu mới</string>
    <string name="ReNewPassword">Nhập lại mật khẩu</string>
    <string name="Submit">Xác nhận</string>
    <string name="OrderList">Danh sách thức uống cần làm</string>
    <string name="Exit">Thoát</string>
    <string name="Finish">Kết thúc</string>
    <string name="Quantity">Số lượng: </string>
    <string name="TablePending">Tất cả các bàn đang chờ xử lý</string>
    <string name="Free">Trống</string>
    <string name="Version">VERSION </string>
    <string name="Loading">Đang tải</string>
    <string name="Thanks">Cám ơn và hẹn gặp lại</string>
    <string name="SalesBill">Bill Thanh Toán</string>
    <string name="Total">Tổng tiền: VNĐ</string>
    <string name="PrintBills">In Hóa Đơn</string>
    <string name="LogIn">Đăng Nhập</string>
    <string name="UsernameAndPassword">Nhập tài khoản và mật khẩu bên dưới</string>
    <string name="OrderComplete">Đặt món hoàn tất</string>
    <string name="WaitChef">Đợi nhà bếp phản hồi và đem lên cho khách</string>
    <string name="AllCoffee">Tất cả các loại thức uống tại LowLane Coffee</string>
    <string name="ConfirmOrder">Xác nhận món</string>
    <string name="ConfimeOrder2">Tổng quan về đơn đặt hàng của bạn, vui lòng đảm bảo và xác nhận</string>
    <string name="YourOrderList">Danh sách đặt hàng</string>
    <string name="OrderNow">Đặt ngay</string>
    <string name="SelectTable">Chọn bàn để gọi nước</string>
    <string name="AllTableFree">Các bàn đang trống tại quán</string>
    <string name="Mail">Email</string>
    <string name="Logout">Đăng xuất</string>
    <string name="CreateNewDrink">Tạo đồ uống mới</string>
    <string name="DrinkNames">Tên đồ uống</string>
    <string name="Name">Tên: </string>
    <string name="Ordering">Những bàn đang được đặt</string>
    <string name="SelectTableToGetInvoice">Chọn bàn để lấy hóa đơn</string>
    <string name="FreeAndPending">Những bàn trống và đang đợi xác nhận từ bếp</string>
    <string name="SelectTableToOrder">Chọn một bàn để đặt nước</string>
    <string name="Select">Chọn Ảnh</string>
</resources>
