<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/powder_blue"
    android:orientation="vertical"
    tools:context=".View.Admin_DrinksConfig.AdminDeleteDrink">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/size80dp"
            android:layout_height="@dimen/size80dp"
            android:layout_marginTop="@dimen/size8dp"
            android:src="@drawable/new_drink"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/DeleteDrink"
            android:textColor="@color/red_50"
            android:textSize="@dimen/size24sp"
            android:fontFamily="@font/bangers"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size8dp"
            android:text="@string/DrinkName"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/drinkID"
            android:layout_width="@dimen/size30dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/g_radius_text"
            android:textStyle="bold"
            android:textSize="@dimen/size16sp"
            android:enabled="false"
            android:layout_marginStart="@dimen/size10dp"
            />

        <Spinner
            android:id="@+id/spDrinkName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size8dp"
            android:background="@drawable/g_radius_text"
            android:paddingStart="@dimen/size5dp"
            android:textSize="@dimen/size16sp"
            tools:ignore="RtlSymmetry"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size8dp"
            android:layout_marginTop="@dimen/size8dp"
            android:layout_marginEnd="@dimen/size8dp"
            android:layout_marginBottom="@dimen/size8dp"
            android:background="@drawable/g_radius_gb_button"
            android:text="@string/Delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size8dp"
            android:layout_marginTop="@dimen/size8dp"
            android:layout_marginEnd="@dimen/size8dp"
            android:layout_marginBottom="@dimen/size8dp"
            android:background="@drawable/g_radius_gb_button"
            android:text="@string/Cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>